fixed z-index

--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,8 @@ body {
   box-sizing: border-box;
   margin: 0;
   z-index: 0;
-  overflow-x: hidden; }
+  overflow-x: hidden;
+  position: relative; }
 
 body {
   font-family: "Lato", sans-serif;
