--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -16,4 +16,5 @@ box-sizing: border-box;
 margin: 0;
 z-index: 0;
 overflow-x: hidden;
+position: relative;
 }
